--- a/es6-1/src/index.html
+++ b/es6-1/src/index.html
@@ -13,6 +13,6 @@
         <li>3</li>
         <li>4</li>
     </ul>
-    <script src="./js/字符串.js"></script>
+    <script src="./js/数组.js"></script>
 </body>
 </html>
