--- a/es6-1/src/index.html
+++ b/es6-1/src/index.html
@@ -13,6 +13,6 @@
         <li>3</li>
         <li>4</li>
     </ul>
-    <script src="./js/类.js"></script>
+    <script src="./js/类2.js"></script>
 </body>
 </html>
