--- a/es6-module/src/index.html
+++ b/es6-module/src/index.html
@@ -7,12 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-    </ul>
-    <script src="./js/generator.js"></script>
+    <script src="build/index.js"></script>
 </body>
 </html>
