--- a/vue-基础/计算属性.html
+++ b/vue-基础/计算属性.html
@@ -30,11 +30,11 @@
             },
             computed:{
                 addToA1(){
-                    console.log('addToA 方法')
+                    console.log('addToA1 计算属性')
                     return this.a + this.age
                 },
                 addToB1(){
-                    console.log('addToB 方法')
+                    console.log('addToB1 计算属性')
                     return this.b + this.age
                 }
             },
